Added: calculating prev semester instead of getting it as a parameter
